--- a/index.html
+++ b/index.html
@@ -65,5 +65,14 @@
       </tr>
     </tbody>
   </table>
+   <h2>VIDEO</h2>
+<video width="320" height="240" controls>
+  <source src="Fundamental Concepts of Object Oriented Programming.mp4" type="video/mp4">
+</video>
+
+<H2>AUDIO</H2>
+<audio controls>
+  <source src="Sia_-_Unstoppable_CeeNaija.com_.mp3" type="audio/ogg">
+</audio>
 </body>
 </html>
